Modified the "hide-scrollbars" and "show-scrollbars" CSS classes to toggle the "overflow" property on an Overlay's root HTML element between "hidden" and "auto" to [fix bug 1241324]

--- a/widget/container/src/css/container.css
+++ b/widget/container/src/css/container.css
@@ -43,16 +43,53 @@
     background-color:#CCC;
 }
 
+/*
+
+PLEASE NOTE: There are two known issues with Overlay (and its subclasses)
+that manifest in Gecko-based browsers on Mac OS X:
+
+1) Elements with scrollbars will poke through Overlay instances floating 
+   above them.
+
+2) If an Overlay instance contains child elements with scrollbars, those
+   scrollbars will remain visible after the Overlay is hidden.
+
+To fix these bugs:
+
+1) An Overlay instance's "overflow" property is toggled between
+   "auto" and "hidden" through the application and removal of the 
+   "hide-scrollbars" and "show-scrollbars" classes (see below) as its 
+   "visibility" configuration property is toggled between "true" and "false."
+   These classes are applied only for Gecko on Mac OS X and are added/removed 
+   to/from the Overlay's root HTML element (DIV) via the 
+   "hideMacGeckoScrollbars" and "showMacGeckoScrollbars" methods of the 
+   Overlay class.
+
+2) The "overflow" property of an Overlay instance's child nodes is
+   set to "hidden" when it is hidden and the "display" property of HTML 
+   <SELECT> elements are set to "none" (see below).
+
+* For more information on this issue, see:
++ https://bugzilla.mozilla.org/show_bug.cgi?id=187435
++ SourceForge bug #1723530
+
+*/
+
+.hide-scrollbars,
 .hide-scrollbars * {
 	overflow:hidden;
 }
 
-.hide-scrollbars textarea, .hide-scrollbars select {
-	overflow:hidden;
+.hide-scrollbars select {
 	display:none;
 }
 
-.show-scrollbars textarea, .show-scrollbars select {
+.show-scrollbars {
+    overflow:auto;
+}
+
+.show-scrollbars textarea, 
+.show-scrollbars select {
 	overflow:visible;
 }
 
@@ -63,6 +100,10 @@
 	visibility:hidden;
 	overflow:visible;
 	width:auto;
+}
+
+.yui-panel-container.show-scrollbars>div {
+    overflow:auto;
 }
 
 .yui-panel-container.focused {
